[package]
authors = ["carlos alejandro gutierrez sandoval <calgusa@gmail.com>"]
categories = ["science"]
edition = "2018"
keywords = ["MASS", "similarity-search", "data-science", "time-series", "HPC"]
license = "MIT"
name = "super_mass"
repository = "https://github.com/CAGS295/mass"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[features]
auto = []
default = ["pseudo_distance", "auto"]
jemalloc = ["jemallocator"]
pseudo_distance = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
jemallocator = {version = "*", optional = true}
num_cpus = "*"
rayon = "*"
rustfft = "*"
serde = {version = "*", features = ["derive"]}

[profile.test]
opt-level = 3
