[package]
authors = ["carlos alejandro gutierrez sandoval <calgusa@gmail.com>"]
categories = ["science"]
description = "MASS: Mueen's Algorithm for Similarity Search in Rust!"
edition = "2018"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["MASS", "similarity-search", "data-science", "time-series", "HPC"]
license = "MIT"
name = "super_mass"
repository = "https://github.com/CAGS295/mass"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[features]
auto = []
default = ["pseudo_distance", "auto"]
jemalloc = ["jemallocator"]
pseudo_distance = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10"
jemallocator = {version = "^0.3", optional = true}
num_cpus = "^1.13"
rand = "^0.8"
rayon = "^1.5"
rustfft = "^4.1"
serde = {version = "^1.0", features = ["derive"]}

[profile.test]
opt-level = 3
